# fund-nav-mcp

./: .env.dev  .env.example  .env.prod  .env.test  .gitignore  CHANGELOG.md  README.md  README.zh-CN.md  pyproject.toml
configs/: log_libraries.json
docker/: .env.example  compose.override.example.yml  compose.yml
fund_nav_mcp/: __init__.py  config.py  middleware.py  server.py
fund_nav_mcp/apps/: __init__.py  config_app.py
fund_nav_mcp/db/: __init__.py  core.py
fund_nav_mcp/error/: exceptions.py
fund_nav_mcp/handlers/: __init__.py  add_handlers.py  base_handlers.py  delete_handlers.py  query_handlers.py  update_handlers.py
fund_nav_mcp/models/: __init__.py  common.py  schemas.py
fund_nav_mcp/models/orm/: __init__.py  base.py  category.py  fund.py  manager.py
fund_nav_mcp/models/pydantic/: __init__.py  builder.py  filter.py  filter.pyi  fund.py  fund_validators.py  generate.py  search.py  search.pyi
fund_nav_mcp/tools/: __init__.py  add_tools.py  basic_tools.py  delete_tools.py  fund_tools.py  query_tools.py  ui_tools.py  update_tools.py
fund_nav_mcp/utils/: common.py  enums.py  log.py  path_utils.py
mock/: mock_fund_data.py
scripts/: refresh_stub.py
tests/: conftest.py  test_add_handlers.py  test_config.py  test_delete_handlers.py  test_log.py  test_orm_fund.py  test_query_handlers.py  test_rdbms_db.py  test_timeseries_db.py  test_update_handlers.py
