[project]
name = "fund-nav-mcp"
version = "0.1.0"
description = "A MCP server for fund NAV management"
authors = [{ name = "ramid", email = "ramid@qq.com" }]
readme = "README.md"
keywords = ["fund", "nav", "mcp"]
license = { text = "MIT" }
requires-python = ">=3.12"

classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Financial and Insurance Industry",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "License :: OSI Approved :: MIT License",
]
dependencies = [
    "fastmcp[apps,tasks]>=3.2.3",
    "influxdb-client>=1.50.0",
    "psycopg2>=2.9.12",
    "pydantic>=2.13.0",
    "pydantic-settings[toml]>=2.13.1",
    "pymysql>=1.1.2",
    "redis>=7.4.0",
    "requests>=2.33.1",
    "sqlalchemy>=2.0.49",
    "tomli>=2.4.1",
    "tomli-w>=1.2.0",
]

[dependency-groups]
dev = [
    "black>=26.3.1",
    "mypy>=1.20.1",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "pytest-mock>=3.15.1",
    "ruff>=0.15.10",
]

[project.scripts]
fund-nav-mcp = "fund_nav_mcp.server:cli"

[project.urls]
Repository = "https://github.com/RamidLab/fund-nav-mcp"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "C4", "SIM"]
ignore = ["E501"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.black]
line-length = 100
target-version = ['py312']

