[project]
name = "fund-nav-mcp"
version = "0.8.2"
description = "A MCP server for fund NAV management"
authors = [{ name = "ramid", email = "ramid@qq.com" }]
readme = "README.md"
keywords = ["fund", "nav", "mcp"]
license = { text = "MIT" }
requires-python = ">=3.12"

classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Financial and Insurance Industry",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "License :: OSI Approved :: MIT License",
]
dependencies = [
    "aiohttp>=3.13.5",
    "aiosqlite>=0.22.1",
    "asyncmy>=0.2.11",
    "asyncpg>=0.31.0",
    "booktype>=1.5",
    "contextvars>=2.4",
    "fastmcp[tasks]>=3.2.4",
    "influxdb-client>=1.50.0",
    "prefab-ui>=0.19.1",
    "psycopg2>=2.9.12",
    "pydantic>=2.13.0",
    "pydantic-settings[toml]>=2.13.1",
    "pymysql>=1.1.3",
    "pysqlite3>=0.6.0",
    "python-dotenv>=1.2.2",
    "redis[hiredis]>=7.4.0",
    "requests>=2.33.1",
    "sqlalchemy>=2.0.49",
    "starlette>=1.0.0",
    "tomli>=2.4.1",
    "tomli-w>=1.2.0",
    "typer>=0.25.0",
]

[dependency-groups]
dev = [
    "black>=26.3.1",
    "faker>=40.15.0",
    "mypy>=1.20.1",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "pytest-mock>=3.15.1",
    "ruff>=0.15.10",
]

[project.scripts]
fund-nav-mcp = "fund_nav_mcp.server:cli"

[project.urls]
Repository = "https://github.com/RamidLab/fund-nav-mcp"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "function"
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "C4", "SIM"]
ignore = ["E501"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.black]
line-length = 100
target-version = ['py312']
